# openapi.yaml
@@ -3,13 +3,32 @@
 
 openapi: 3.0.3
 info:
-    title: UsersService API
+    title: ""
     version: 0.0.1
 paths:
+    /api/v1/file/upload:
+        post:
+            tags:
+                - File
+            operationId: File_UploadFile
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/.UploadFileRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/.UploadFileReply'
     /api/v1/login/firebase:
         post:
             tags:
                 - UsersService
+            description: firebase登录
             operationId: UsersService_LoginFirebase
             requestBody:
                 content:
@@ -24,18 +43,18 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/.LoginFirebaseResponse'
-    /api/v1/users/{id}:
-        get:
+    /api/v1/user:
+        post:
             tags:
                 - UsersService
+            description: 通过id获取用户信息
             operationId: UsersService_GetUser
-            parameters:
-                - name: id
-                  in: path
-                  required: true
-                  schema:
-                    type: integer
-                    format: int32
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/.GetUserRequest'
+                required: true
             responses:
                 "200":
                     description: OK
@@ -43,21 +62,46 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/.GetUserResponse'
+    /api/v1/user/me:
+        post:
+            tags:
+                - UsersService
+            description: 获取自己的用户信息
+            operationId: UsersService_GetMyUser
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/.GetMyUserRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/.GetMyUserResponse'
 components:
     schemas:
+        .GetMyUserRequest:
+            type: object
+            properties: {}
+        .GetMyUserResponse:
+            type: object
+            properties:
+                user:
+                    $ref: '#/components/schemas/.UserDTO'
+        .GetUserRequest:
+            type: object
+            properties:
+                id:
+                    type: integer
+                    format: int32
         .GetUserResponse:
             type: object
             properties:
-                nickname:
-                    type: string
-                avatar:
-                    type: string
-                email:
-                    type: string
-                provider:
-                    type: string
-                providerUid:
-                    type: string
+                user:
+                    $ref: '#/components/schemas/.UserDTO'
         .LoginFirebaseRequest:
             type: object
             properties:
@@ -72,6 +116,28 @@ components:
                     type: string
                 user:
                     $ref: '#/components/schemas/.UserProfile'
+        .UploadFileReply:
+            type: object
+            properties: {}
+        .UploadFileRequest:
+            type: object
+            properties: {}
+        .UserDTO:
+            type: object
+            properties:
+                id:
+                    type: integer
+                    format: int32
+                nickname:
+                    type: string
+                avatar:
+                    type: string
+                email:
+                    type: string
+                provider:
+                    type: string
+                providerUid:
+                    type: string
         .UserProfile:
             type: object
             properties:
@@ -86,4 +152,5 @@ components:
                 providerUid:
                     type: string
 tags:
+    - name: File
     - name: UsersService
